Made the user menus have the correct icon names so they can be visible [endlessm/eos-shell#816]

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -254,7 +254,6 @@ StScrollBar StButton#vhandle:active {
 
 .popup-user-menu-item-icon {
     icon-size: 18px;
-    color: #fff;
     padding-right: 15px;
 }
 
